--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll"
   },
@@ -14,8 +14,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@metamask/sdk-react": "^0.20.2",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.8",
+    "@thirdweb-dev/react-native": "^0.7.21",
+    "@thirdweb-dev/react-native-compat": "^0.7.21",
+    "ethers": "^5.7.2",
+    "expo": "^51.0.0",
+    "expo-crypto": "~13.0.2",
     "expo-font": "~12.0.5",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
@@ -23,12 +29,21 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
+    "node-libs-browser": "^2.2.1",
+    "node-libs-expo": "^0.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-background-timer": "^2.4.1",
+    "react-native-crypto": "^2.2.0",
+    "react-native-get-random-values": "^1.8.0",
+    "react-native-mmkv": "^2.12.2",
+    "react-native-randombytes": "^3.6.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^13.14.1",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
